argo-rollouts-analysis/blue-green/roullout-w-analysis.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blue-green-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-green-deployment
  template:
    metadata:
      labels:
        app: blue-green-deployment
    spec:
      containers:
        - name: blue-green
          image: ahmedevops/blue-green
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
  strategy:
    blueGreen:
      activeService: rollout-bluegreen-active
      previewService: rollout-bluegreen-preview
      autoPromotionEnabled: true
#      prePromotionAnalysis:     #### Pre-Promotion Analysis
#        templates:
#          - templateName: success-rate-pre
#        args:
#          - name: service-namespace
#            value: default
      postPromotionAnalysis:    #### Post-Promotion Analysis
        templates:
        - templateName: success-rate-post
        args:
        - name: service-namespace
          value: default
      # abortScaleDownDelaySeconds: 10
      # scaleDownDelaySeconds: 60
      # previewReplicaCount: 2
      # autoPromotionSeconds: 70
---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active
spec:
  selector:
    app: blue-green-deployment
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
spec:
  selector:
    app: blue-green-deployment
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
